java 3 finished